@@ -16,13 +16,13 @@
 		<maven.compiler.target>1.6</maven.compiler.target>
 		<webappDirectory>${project.build.directory}/${project.build.finalName}</webappDirectory>
 
-		<synapse.version>y.0-5-g4e4ba8e</synapse.version>
+		<synapse.version>2013-07-12-2d34131-557</synapse.version>
 
 		<gwtVersion>2.4.0</gwtVersion>
 		<org.springframework.version>3.0.5.RELEASE</org.springframework.version>
 		<guiceVersion>3.0-rc2</guiceVersion>
 		<xstream.version>1.3.1</xstream.version>
-		<schema-to-pojo.version>0.1.21</schema-to-pojo.version>
+		<schema-to-pojo.version>0.2.0</schema-to-pojo.version>
 		<org.json.version>20090211</org.json.version>
 		<jackson.version>1.8.1</jackson.version>
 	</properties>
@@ -88,7 +88,24 @@
 	</pluginRepositories>
 
 	<build>
-		<!-- Generate compiled stuff in the folder used for developing mode -->
+	    <resources>
+	      <resource>
+	        <directory>src/main/resources</directory>
+	        <filtering>true</filtering>
+	        <includes>
+	          <include>**/*.properties</include>
+	        </includes>
+	      </resource>
+	      <resource>
+	        <directory>src/main/resources</directory>
+	        <filtering>false</filtering>
+	        <excludes>
+	          <exclude>**/*.properties</exclude>
+	        </excludes>
+	      </resource>
+	    </resources>	    
+
+    		<!-- Generate compiled stuff in the folder used for developing mode -->
 		<outputDirectory>${webappDirectory}/WEB-INF/classes</outputDirectory>
 
 		<pluginManagement>
@@ -179,6 +196,12 @@
 					<!-- Run the GWT test with the headless html unit. -->
 					<mode>htmlunit</mode>
 					<module>org.sagebionetworks.web.Portal</module>
+					<!-- GWT compiler options -->
+			        <compileReport>true</compileReport>
+			        <encoding>${project.build.sourceEncoding}</encoding>
+			        <logLevel>INFO</logLevel>
+			        <extraJvmArgs>-Xmx896M -Xms896m -XX:PermSize=64m -XX:MaxPermSize=128m</extraJvmArgs>
+					<!--           <fragmentCount>12</fragmentCount> -->					
 				</configuration>
 			</plugin>
 
@@ -259,12 +282,6 @@
 			<artifactId>synapseJavaClient</artifactId>
 			<version>${synapse.version}</version>
 		</dependency>
-		<dependency>
-			<groupId>org.sagebionetworks</groupId>
-			<artifactId>bccSetup</artifactId>
-			<version>${synapse.version}</version>
-		</dependency>
-
 
 		<!-- Make sure all the Jackson libraries are of the same version -->
 		<dependency>
@@ -298,6 +315,7 @@
 			<version>${org.springframework.version}</version>
 		</dependency>
 		
+			<!-- note: OpenID4Java seems to require version 4.1.1 and to break with 4.1.2 -->
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
